--- a/charts/other/multus/Chart.yaml
+++ b/charts/other/multus/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v2
 description: A Helm chart for the Multus CNI CustomResourceDefinition
 name: multus
-version: 1.0.1
+version: 1.0.2
 appVersion: 4.2.2
 maintainers:
   - name: bjw-s
@@ -12,9 +12,9 @@ sources:
 dependencies:
   - name: common
     repository: https://bjw-s-labs.github.io/helm-charts
-    version: 4.4.0
+    version: 4.5.0
 annotations:
   artifacthub.io/changes: |-
     - kind: changed
       description: |-
-        Update ghcr.io/k8snetworkplumbingwg/multus-cni ( v4.2.2 ➔ v4.2.3 )
+        Upgraded the common library to v4.5.0
