--- a/.ci/ct/ct.yaml
+++ b/.ci/ct/ct.yaml
@@ -13,4 +13,4 @@ chart-dirs:
   - charts/other
 
 chart-repos:
-  - bjw-s=https://bjw-s-labs.github.io/helm-charts
+  - TilloTech=https://TilloTech.github.io/tillo-platform-helm-library
