--- a/.github/workflows/chart-release-steps.yaml
+++ b/.github/workflows/chart-release-steps.yaml
@@ -73,7 +73,7 @@ jobs:
       # ----------------------------
       - name: Get chart details
         id: chart-details
-        uses: bjw-s-labs/helm-charts-actions/get-chart-details@d3d1c2c2ac4e5542b6b404d933efc6dbe71836ea
+        uses: TilloTech/tillo-helm-charts-actions/get-chart-details@d3d1c2c2ac4e5542b6b404d933efc6dbe71836ea
         with:
           path: src/charts/${{ inputs.chart }}
           validateChartYaml: true
@@ -124,7 +124,7 @@ jobs:
       # Package Helm chart
       # ----------------------------
       - name: Dereference JSON schema before packaging
-        uses: bjw-s-labs/helm-charts-actions/dereference-json-schema@d3d1c2c2ac4e5542b6b404d933efc6dbe71836ea
+        uses: TilloTech/tillo-helm-charts-actions/dereference-json-schema@d3d1c2c2ac4e5542b6b404d933efc6dbe71836ea
         with:
           schemaFile: "src/charts/${{ inputs.chart }}/values.schema.json"
           outputFile: "src/charts/${{ inputs.chart }}/values.schema.json"
@@ -175,7 +175,7 @@ jobs:
         shell: bash
         working-directory: gh-pages
         run: |
-          helm repo index . --url https://bjw-s-labs.github.io/helm-charts/
+          helm repo index . --url https://TilloTech.github.io/tillo-platform-helm-library/
 
       - name: Commit Changes
         if: ${{ inputs.publishToGhPages }}
@@ -215,7 +215,7 @@ jobs:
           body: ${{ steps.format-changelog.outputs.changelog }}
 
       # ----------------------------
-      # Publish chart to bjw-s OCI registry
+      # Publish chart to Tillo OCI registry
       # ----------------------------
       - name: Install Cosign
         if: ${{ inputs.publishToOciRegistry }}
@@ -228,7 +228,7 @@ jobs:
           PACKAGE_FILE: ${{ steps.package-chart.outputs.result }}
           CHART_NAME: ${{ steps.chart-details.outputs.name }}
           CHART_VERSION: ${{ steps.chart-details.outputs.version }}
-          CHART_TAG_BASE: ghcr.io/bjw-s-labs/helm
+          CHART_TAG_BASE: ghcr.io/TilloTech/helm
           CHART_TAG: ${{ steps.chart-details.outputs.name }}:${{ steps.chart-details.outputs.version }}
           GITHUB_REF: ${{ github.ref }}
         run: |-
