--- a/examples/kustomize/kustomization.yaml
+++ b/examples/kustomize/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 helmCharts:
   - name: app-template
-    repo: https://bjw-s-labs.github.io/helm-charts/
+    repo: https://TilloTech.github.io/tillo-platform-helm-library/
     # this example is not automatically updated, so be sure to use the latest chart version
     version: 4.5.0
     releaseName: &releaseName vaultwarden
@@ -12,5 +12,3 @@ helmCharts:
 commonAnnotations:
   meta.helm.sh/release-name: *releaseName
   meta.helm.sh/release-namespace: *releaseNamespace
-commonLabels:
-  app.kubernetes.io/managed-by: Helm
