--- a/.mise.toml
+++ b/.mise.toml
@@ -8,9 +8,9 @@ pipx_uvx = true
 python.uv_venv_auto = true
 
 [tools]
-python = "3.14.2" # Required for documentation generation
-rust = "1.92.0" # Required for schematools
-"aqua:astral-sh/uv" = "0.9.18"
+python = "3.14.2"                    # Required for documentation generation
+rust = "1.92.0"                      # Required for schematools
+uv = 'latest'
 "aqua:casey/just" = "1.45.0"
 "aqua:google/yamlfmt" = "0.20.0"
 "aqua:helm" = "3.19.4"
@@ -21,4 +21,18 @@ rust = "1.92.0" # Required for schematools
 "pipx:yamale" = "6.1.0"
 
 [hooks]
-postinstall = "uv pip install --upgrade -r {{config_root}}/docs/requirements.txt"
+postinstall = '''
+    if [ "${CI:-}" = "true" ]; then
+      echo "mise postinstall: skipping in CI"
+      exit 0
+    fi
+
+    # Local-only path
+    if [ ! -d ".venv" ]; then
+      echo "mise postinstall: .venv not present yet, skipping"
+      exit 0
+    fi
+
+    . .venv/bin/activate
+    uv pip install --upgrade -r {{config_root}}/docs/requirements.txt
+'''
